--- a/07-WeatherGeneration.Rmd
+++ b/07-WeatherGeneration.Rmd
@@ -1,6 +1,8 @@
 # Weather generation {#weathergeneration}
 
-Since version 0.8.6, **meteoland** incorporates the possibility of generating stochastic weather series. Stochastic weather generators are algorithms that produce series of synthetic daily weather data. The parameters of the model are conditioned on existing meteorological records to ensure the characteristics of input weather series emerge in the daily stochastic process. The weather generation approaches available in **meteoland** are intended to be used to generate daily series of the same length as the input. It can be understood as a bootstrap resampling algorithm that tries to preserve some properties of the original weather series.  The approach implemented in **meteoland** can be applied to any spatial structure (points/pixels/grid) and it preserves the spatial correlation and multivariate covariance structure of weather series (because it works on area-averaged weather and the chosen resampled days are applied to all points/pixels). 
+**IMPORTANT NOTE**: In version 0.8.6, **meteoland** incorporated the possibility of generating stochastic weather series. Note, however, that the corresponding functions have been *deprecated* since **ver. 2.0.0**. We still keep this theoretical explanation in case new functions are developed in the future.
+
+Stochastic weather generators are algorithms that produce series of synthetic daily weather data. The parameters of the model are conditioned on existing meteorological records to ensure the characteristics of input weather series emerge in the daily stochastic process. The weather generation approaches available in **meteoland** are intended to be used to generate daily series of the same length as the input. It can be understood as a bootstrap resampling algorithm that tries to preserve some properties of the original weather series.  The approach implemented in **meteoland** can be applied to any spatial structure and it preserves the spatial correlation and multivariate covariance structure of weather series (because it works on area-averaged weather and the chosen resampled days are applied to all points/pixels). 
 
 Two modes of weather generation are offered:
 
