--- a/04-SolarRadiation.Rmd
+++ b/04-SolarRadiation.Rmd
@@ -378,48 +378,40 @@ where $e$ is the actual vapor pressure (kPa), $T_{\max}$ and $T_{\min}$ are the 
 
 The following figure shows an example of radiation balance for a whole year for a single site (see functions `radiation_outgoingLongwaveRadiation()` and `radiation_netRadiation()`):
 
-```{r, echo=FALSE, fig.align='center', fig.width=4, fig.height=4}
+```{r, echo=FALSE, message= FALSE, fig.align='center', fig.width=7, fig.height=5}
 library(meteoland)
-data(examplegridtopography)
-data(exampleinterpolationdata)
+data("points_to_interpolate_example")
+interpolator <- meteoland::read_interpolator("interpolator_2000_calibrated.nc")
 
-#Creates spatial topography points from the grid
-p = 1:2
-points = as(examplegridtopography,"SpatialPoints")[p]
-points = spTransform(points, exampleinterpolationdata@proj4string)
-spt = SpatialPointsTopography(points, examplegridtopography$elevation[p],
-                              examplegridtopography$slope[p],
-                              examplegridtopography$aspect[p])
+# interpolate data
+res <- interpolate_data(points_to_interpolate_example[1,], interpolator)
 
-#Interpolation of two points for the whole time period (2000)
-mp = interpolationpoints(exampleinterpolationdata, spt, verbose=FALSE)
-
-examplemeteo = mp@data[[1]]
-R_s = examplemeteo$Radiation
-tmin = examplemeteo$MinTemperature
-tmax = examplemeteo$MaxTemperature
-rhmin = examplemeteo$MinRelativeHumidity
-rhmax = examplemeteo$MaxRelativeHumidity
-dates = as.Date(row.names(examplemeteo))
-years = as.numeric(format(dates,"%Y"))
-months = as.numeric(format(dates,"%m"))
-days = as.numeric(format(dates,"%d"))
+examplemeteo <- res$interpolated_data[[1]]
+R_s <- examplemeteo$Radiation
+tmin <- examplemeteo$MinTemperature
+tmax <- examplemeteo$MaxTemperature
+rhmin <- examplemeteo$MinRelativeHumidity
+rhmax <- examplemeteo$MaxRelativeHumidity
+dates <- as.Date(examplemeteo$dates)
+years <- as.numeric(format(dates,"%Y"))
+months <- as.numeric(format(dates,"%m"))
+days <- as.numeric(format(dates,"%d"))
 J =rep(NA, length(years))
 for(i in 1:length(years)) {
-  J[i] = radiation_julianDay(years[i],months[i],days[i])
-  sc[i] = radiation_solarConstant(J[i])
-  delta[i] = radiation_solarDeclination(J[i])
+  J[i] <- radiation_julianDay(years[i],months[i],days[i])
+  sc[i] <- radiation_solarConstant(J[i])
+  delta[i] <- radiation_solarDeclination(J[i])
 }
-R_nl = rep(0, length(J))
-R_net = rep(0, length(J))
-latradp = 42*(pi/180)
-elevationp = spt@data$elevation[1] 
-sloradp = spt@data$slope[1]*(pi/180)
-aspradp = spt@data$aspect[1]*(pi/180)
+R_nl <- rep(0, length(J))
+R_net <- rep(0, length(J))
+latradp <- sf::st_coordinates(points_to_interpolate_example)[1,2]*(pi/180)
+elevationp <- points_to_interpolate_example$elevation[1] 
+sloradp <- points_to_interpolate_example$slope[1]*(pi/180)
+aspradp <- points_to_interpolate_example$aspect[1]*(pi/180)
 for(i in 1:length(J)) {
-vpa = utils_averageDailyVP(tmin[i], tmax[i], rhmin[i], rhmax[i])
-R_nl[i] = radiation_outgoingLongwaveRadiation(sc[i],latradp, elevationp, sloradp,aspradp, delta[i], vpa, tmin[i], tmax[i], R_s[i])
-R_net[i] = radiation_netRadiation(sc[i],latradp, elevationp, sloradp,aspradp, delta[i], vpa, tmin[i], tmax[i], R_s[i])
+vpa <- utils_averageDailyVP(tmin[i], tmax[i], rhmin[i], rhmax[i])
+R_nl[i] <- radiation_outgoingLongwaveRadiation(sc[i],latradp, elevationp, sloradp,aspradp, delta[i], vpa, tmin[i], tmax[i], R_s[i])
+R_net[i] <- radiation_netRadiation(sc[i],latradp, elevationp, sloradp,aspradp, delta[i], vpa, tmin[i], tmax[i], R_s[i])
 }
 plot(dates[1:365], R_s[1:365], type="l", xlab="", ylab = "Daily radiation (MJ m-2)", ylim=c(0,40))
 lines(dates[1:365], R_nl[1:365], col="blue")
@@ -469,26 +461,26 @@ To illustrate the above calculations, we assume a target location in a flat terr
 
 ```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
 par(mar=c(4,4,1,1), mfrow=c(2,2))
-latrad = 0.73
-slorad = 0
-asprad = 0
-elevation = 100
-steps = 300
-clearday = TRUE
-J = meteoland::radiation_julianDay(2001,1,15)
-gsc = meteoland::radiation_solarConstant(J)
-delta = meteoland::radiation_solarDeclination(J)
-diffTemp = 10
-diffTempMonth = diffTemp
-vpa = meteoland::utils_averageDailyVP(5,15,70,90)
-precipitation = 0
-ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
-rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+latrad <- 0.73
+slorad <- 0
+asprad <- 0
+elevation <- 100
+steps <- 300
+clearday <- TRUE
+J <- meteoland::radiation_julianDay(2001,1,15)
+gsc <- meteoland::radiation_solarConstant(J)
+delta <- meteoland::radiation_solarDeclination(J)
+diffTemp <- 10
+diffTempMonth <- diffTemp
+vpa <- meteoland::utils_averageDailyVP(5,15,70,90)
+precipitation <- 0
+ptrad <- meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad <- meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
                                           delta, diffTemp, diffTempMonth, vpa,
                                           precipitation)
-a=meteoland::radiation_directDiffuseDay(gsc, latrad, slorad, asprad, delta, rad, clearday, steps)
-se = a$SolarElevation*(180/pi)
-se[a$Rpot==0]=NA
+a <- meteoland::radiation_directDiffuseDay(gsc, latrad, slorad, asprad, delta, rad, clearday, steps)
+se <- a$SolarElevation*(180/pi)
+se[a$Rpot==0] <- NA
 plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
 plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.8))
 lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
@@ -506,15 +498,15 @@ For a flat surface, the extraterrestrial radiation is the same that potential ra
 
 ```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
 par(mar=c(4,4,1,1), mfrow=c(2,2))
-slorad = pi*10/180
-asprad = 0
-ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
-rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+slorad <- pi*10/180
+asprad <- 0
+ptrad <- meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad <- meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
                                           delta, diffTemp, diffTempMonth, vpa,
                                           precipitation)
-a=meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
-se = a$SolarElevation*(180/pi)
-se[a$Rpot_flat==0]=NA
+a <- meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
+se <- a$SolarElevation*(180/pi)
+se[a$Rpot_flat==0] <- NA
 plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
 plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.8))
 lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
@@ -532,15 +524,15 @@ In this situation, diffuse light should follow extraterrestrial radiation hours 
 
 ```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
 par(mar=c(4,4,1,1), mfrow=c(2,2))
-slorad = pi*30/180
-asprad = 0
-ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
-rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+slorad <- pi*30/180
+asprad <- 0
+ptrad <- meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad <- meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
                                           delta, diffTemp, diffTempMonth, vpa,
                                           precipitation)
-a=meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
-se = a$SolarElevation*(180/pi)
-se[a$Rpot_flat==0]=NA
+a <- meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
+se <- a$SolarElevation*(180/pi)
+se[a$Rpot_flat==0] <- NA
 plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
 plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,0.8))
 lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
@@ -558,18 +550,18 @@ Let us now set the date to 15th of june, the flat surface would receive 27.7 $MJ
 
 ```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
 par(mar=c(4,4,1,1), mfrow=c(2,2))
-slorad = 0
-asprad = 0
-J = meteoland::radiation_julianDay(2001,6,15)
-gsc = meteoland::radiation_solarConstant(J)
-delta = meteoland::radiation_solarDeclination(J)
-ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
-rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+slorad <- 0
+asprad <- 0
+J <- meteoland::radiation_julianDay(2001,6,15)
+gsc <- meteoland::radiation_solarConstant(J)
+delta <- meteoland::radiation_solarDeclination(J)
+ptrad <- meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad <- meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
                                           delta, diffTemp, diffTempMonth, vpa,
                                           precipitation)
-a=meteoland::radiation_directDiffuseDay(gsc, latrad, slorad, asprad, delta, rad, clearday, steps)
-se = a$SolarElevation*(180/pi)
-se[a$Rpot==0]=NA
+a <- meteoland::radiation_directDiffuseDay(gsc, latrad, slorad, asprad, delta, rad, clearday, steps)
+se <- a$SolarElevation*(180/pi)
+se[a$Rpot==0] <- NA
 plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
 plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,2))
 lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
@@ -587,15 +579,15 @@ whereas the 10 degree north-facing slope would receive 27.3 $MJ·m^{-2}$ divided
 
 ```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
 par(mar=c(4,4,1,1), mfrow=c(2,2))
-slorad = pi*10/180
-asprad = 0
-ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
-rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+slorad <- pi*10/180
+asprad <- 0
+ptrad <- meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad <- meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
                                           delta, diffTemp, diffTempMonth, vpa,
                                           precipitation)
-a=meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
-se = a$SolarElevation*(180/pi)
-se[a$Rpot_flat==0]=NA
+a <- meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
+se <- a$SolarElevation*(180/pi)
+se[a$Rpot_flat==0] <- NA
 plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
 plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,2))
 lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
@@ -613,15 +605,15 @@ and the 30 degree slope would have 24.2 $MJ·m^{-2}$ and a repartition:
 
 ```{r, echo=FALSE, fig.align='center', fig.width=7, fig.height=6}
 par(mar=c(4,4,1,1), mfrow=c(2,2))
-slorad = pi*30/180
-asprad = 0
-ptrad = meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
-rad = meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
+slorad <- pi*30/180
+asprad <- 0
+ptrad <- meteoland::radiation_potentialRadiation(gsc, latrad, slorad, asprad, delta)
+rad <- meteoland::radiation_solarRadiation(gsc, latrad, elevation, slorad, asprad,
                                           delta, diffTemp, diffTempMonth, vpa,
                                           precipitation)
-a=meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
-se = a$SolarElevation*(180/pi)
-se[a$Rpot_flat==0]=NA
+a <- meteoland::radiation_directDiffuseDay(gsc, latrad,slorad, asprad, delta, rad, clearday, steps)
+se <- a$SolarElevation*(180/pi)
+se[a$Rpot_flat==0] <- NA
 plot(a$SolarHour*12/pi, se, type="l", ylim=c(0,70), ylab="Solar elevation angle (º)", xlab="Solar hour")
 plot(a$SolarHour*12/pi, a$Rpot, type="l", ylab="Radiation (W·m-2)", xlab="Solar hour", ylim=c(0,2))
 lines(a$SolarHour*12/pi, a$Rpot_flat,  lty=2)
