--- a/index.Rmd
+++ b/index.Rmd
@@ -1,9 +1,8 @@
 --- 
 title: "The meteoland reference book"
 author: 
-  name: "Miquel De Cáceres"
+  name: "Miquel De Cáceres, Víctor Granda"
   affiliation: "Centre de Recerca en Ecologia i Aplicacions Forestals (CREAF)"
-  email: "miquelcaceres@gmail.com"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
@@ -31,6 +30,7 @@ In this book we use `objectname` or `variablename` to indicate R code or to refe
 
 The reference book describes in detail the design and functioning of the package. An introduction to the package was provided by De Cáceres et al. [-@DeCaceres2018] at the time of its presentation, but this reference book should be preferred for an up-to-date description of the package. Our aim is to update this reference book along with package developments, so that users have detailed and up-to-date information about the models at the time functions are run. As the book will not be static, after a given application we recommend users to store a **PDF version** of the reference book to be sure it matches the version the package reported in their application report or article.
 
-```{r, out.width='20%', fig.align="center", echo=FALSE}
-knitr::include_graphics("LOGO_Group.png")
+
+```{r, out.width='30%', fig.align="center", echo=FALSE}
+knitr::include_graphics("isotip-nofons.png")
 ```
