--- a/06-PotentialEvapotranspiration.Rmd
+++ b/06-PotentialEvapotranspiration.Rmd
@@ -19,7 +19,7 @@ f(u) &=& 2.626 + 1.381 \cdot u
 \end{eqnarray}
 If wind speed is not available, an alternative formulation for $E_{pot}$ is used as an approximation [@Valiantzas2006]:
 \begin{equation}
-PET \simeq 0.047\cdot R_s \cdot (T_a+9.5)^{0.5}-2.4\cdot (\frac{R_s}{R_{pot}})^2+0.09\cdot(T_a-20)\cdot(1-\frac{RH_{mean}}{100})
+PET \simeq 0.047\cdot R_s \cdot (T_a+9.5)^{0.5}-2.4\cdot \left(\frac{R_s}{R_{pot}} \right)^2+0.09\cdot(T_a-20)\cdot \left(1-\frac{RH_{mean}}{100} \right)
 \end{equation}
 where $R_s$ is the incoming solar radiation (in $MJ\cdot m^{-2}\cdot day^{-1}$), $T_a$ is the mean daily temperature (in $^\circ C$), $R_{pot}$ is the potential (i.e. extraterrestrial) solar radiation (in $MJ\cdot m^{-2}\cdot day^{-1}$) and $RH_{mean}$ is the mean relative humidity (in percent). 
 
